--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-
+spring:
+  output:
+    ansi:
+      enabled: always
+  thymeleaf:
+    cache: false
+    prefix: file:src/main/resources/templates/
+  datasource:
+    url: jdbc:mysql://localhost:3306/sbb__dev?useSSL=false&serverTimezone=Asia/Seoul
+    #    url: jdbc:mariadb://localhost:3306/sbb__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    username: lldj
+    password: lldj123414
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  #    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
